@@ -32,6 +32,10 @@
 #include "dh-window.h"
 #include "eggfindbar.h"
 
+#ifdef GDK_WINDOWING_QUARTZ
+#include <ige-mac-integration.h>
+#endif
+
 struct _DhWindowPriv {
 	DhBase         *base;
 
@@ -471,7 +475,36 @@ window_populate (DhWindow *window)
 					 NULL);
 	gtk_ui_manager_ensure_update (priv->manager);
 
-        priv->hpaned   = gtk_hpaned_new ();
+#ifdef GDK_WINDOWING_QUARTZ
+	{
+		GtkWidget       *widget;
+		IgeMacMenuGroup *group;
+
+		/* Hide toolbar labels. */
+		widget = gtk_ui_manager_get_widget (priv->manager, "/Toolbar");
+		gtk_toolbar_set_style (GTK_TOOLBAR (widget), GTK_TOOLBAR_ICONS);
+
+		/* Setup menubar. */
+		widget = gtk_ui_manager_get_widget (priv->manager, "/MenuBar");
+		ige_mac_menu_set_menu_bar (GTK_MENU_SHELL (widget));
+		gtk_widget_hide (widget);
+
+		widget = gtk_ui_manager_get_widget (priv->manager, "/MenuBar/FileMenu/Quit");
+		ige_mac_menu_set_quit_menu_item (GTK_MENU_ITEM (widget));
+
+		group =  ige_mac_menu_add_app_menu_group ();
+		widget = gtk_ui_manager_get_widget (priv->manager, "/MenuBar/HelpMenu/About");
+		ige_mac_menu_add_app_menu_item (group, GTK_MENU_ITEM (widget),
+						_("About Devhelp"));
+
+		group =  ige_mac_menu_add_app_menu_group ();
+		widget = gtk_ui_manager_get_widget (priv->manager, "/MenuBar/EditMenu/Preferences");
+		ige_mac_menu_add_app_menu_item (group, GTK_MENU_ITEM (widget),
+						_("Preferences..."));
+	}
+#endif
+
+        priv->hpaned = gtk_hpaned_new ();
 
 	gtk_box_pack_start (GTK_BOX (priv->main_box), priv->hpaned, TRUE, TRUE, 0);
 
